Fixed spacing

--- a/src/main.css
+++ b/src/main.css
@@ -89,7 +89,8 @@ h5 {
     opacity: 0.7;
 }
 
-.hero-container p {
+.hero-container p .hero-description .about-me {
+    display: block;
     text-align: center;
 }
 
@@ -125,6 +126,7 @@ h5 {
     color: var(--secondary-color);
     opacity: 0.7;
     margin-bottom: 60px;
+    text-align: center;
 }
 
 .project-link {
